<resources>
    <string name="app_name">MouseClient</string>
    <string name="todo_text">Drag finger anywhere on screen to move mouse\nTap one finger to click, double tap to right click\nLong press to drag</string>
    <string name="image_desc_vol_down">Volume Down</string>
    <string name="image_desc_vol_mute">Toggle Mute</string>
    <string name="image_desc_vol_up">Volume Up</string>
    <string name="image_desc_power">Power off</string>


    <string name="connection_status">Connection status:</string>
    <string name="disconnected">Disconnected</string>
    <string name="connected">Connected</string>
    <string name="close_window">Close Window</string>
</resources>
